# CoolerChips

./: .gitignore  Dockerfile  NOTICE.txt  README.md  docker-compose.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  startup.sh
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
CoolerChips/: .gitattributes  .lgtm.yml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.cfg
CoolerChips/.github/: CONTRIBUTING.md
CoolerChips/CoolerChips/: __init__.py
CoolerChips/devtools/: README.md
CoolerChips/docs/: Makefile  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
CoolerChips/mostcool/: __init__.py
EnergyPlusExample/: 1ZoneDataCenterCRAC_wApproachTemp_mod.idf  2ZoneDataCenterCRAHandplant.idf  2ZoneDataCenterCRAHandplant_aircoolingonly.idf  Controller.py  ControllerConfig.json  Dockerfile  EnergyPlus.py  EnergyPlusAPICode.py  EnergyPlusConfig.json  Thermostat.py  ThermostatConfig.json  app.py  controller.py  cost_model.py  definitions.py  defs.py  energyPlusAPI_Example.py  federate.py  generate_plots.py  gui.py  main.py  main.sh  paraview.py  requirements.txt  runner.json  server_federate.py  simulator.py  thermal_federate.py  trame_.py
EnergyPlusExample/ThermalModel/: liddrivencavity.py
EnergyPlusExample/ThermalModel_chip/: liddrivencavity.py
EnergyPlusExample/ThermalModel_datacenter/: Server_ROM.py  Server_ROM_function.py  coeff.csv
EnergyPlusExample/templates/: home.html  pre-simulation.html  results.html  results_building_energy.html  simulation-setup.html  simulation.html  step-1.html  step-2.html  step-3.html
MOSTCOOL/: Dockerfile  app.py  controller.py  gui.py  paraview_.py  requirements.txt  runner.json  trame_.py  update_cgns.py
MOSTCOOL/Cost/: __init__.py  (+5 more)
Thermal Models/: DC_Online_code.py
backend/: app.py  working.py
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
frontend/: package-lock.json  package.json
mostcool/: Dockerfile  __init__.py  app.py
(+142 files in other folders)
