[build-system]
requires = ["setuptools>=61.0", "wheel", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mostcool"
description = "The MOSTCOOL repo."
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Jermy Thomas", email = "Jermy.Thomas@nrel.gov" }
]
license = { text = "Not Open Source" }
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
  "pytest-cov>=2.10.1"
]

[tool.setuptools]
zip-safe = false
include-package-data = true  

[tool.setuptools.packages.find]
where = ["mostcool"]
namespaces = false

[tool.setuptools.package-data]
mostcool = [
    "py.typed"
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "mostcool/_version.py"
