# Helper file to handle all configs

[metadata]
name = mostcool
version = attr: mostcool.__version__
description = The MOSTCOOL repo.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jermy Thomas
author_email = Jermy.Thomas@nrel.gov
license = Not Open Source
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
include_package_data = true

[options.extras_require]
test =
    pytest>=6.1.2


[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    mostcool/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[aliases]
test = pytest
